# cmake-template-sourcemod

./: .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md
extensions/: CMakeLists.txt  extension.cpp  extension.h  smsdk_config.h
scripting/: CMakeLists.txt  another-cmake-example.sp  cmake-example.sp  cmake-example2.sp
scripting/include/: cmake-example.inc
